adding audio file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Trivia Game</title>
+  <title>NFL Trivia Game</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+<header>
+<h1 style="color:white;"> NFL QUIZ GAME</h1>
+</header>
 <body>
-
+<div class="background"></div>
   <header>
     
     <div class="center">
@@ -15,7 +18,7 @@
   </header>
 
   <div class="startBtn">
-    <button id="start">Begin</button>
+    <button id="start">Press Start</button>
   </div>
   <div class="blanket hidden">
 
@@ -45,11 +48,6 @@
     </div>
 
   </div>
-
-
-
-
-
 
 
 
