--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
   </div>
 
+<audio id="song" src="assets/audio/NFL-on-FOX_-_Football-Song-Theme.mp3" type="audio/mp3"></audio>
 
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
