made more changes - added reset button, and removed header

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-<header>
-<h1 style="color:white;"> NFL QUIZ GAME</h1>
-</header>
+
+<h1  class="font" style="color:white;"> NFL QUIZ GAME</h1>
+
 <body>
 <div class="background"></div>
   <header>
@@ -24,7 +24,7 @@
 
   
     <div id="startClock">
-    <!--<div class="question-container"></div> -->
+    <div class="question-container"></div>
       <h3>Time left: </h3>
       <br>
       <span id="count"></span>
